# biotools-cli

./: .SRCINFO  .gitignore  PKGBUILD  README.md  pan-genome-analysis.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/biotools_cli/: __init__.py  api.py  cli.py
tests/: __init__.py  test_api.py  test_cli.py
