[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "biotools-cli"
version = "0.1.0"
description = "Read-only command line client for the bio.tools API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenCode" }
]
license = { text = "MIT" }
keywords = ["bio.tools", "biotools", "cli", "api", "bioinformatics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Utilities"
]

[project.scripts]
biotools = "biotools_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
