[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "biotools-cli"
version = "0.1.0"
description = "Read-only command line client for the bio.tools API"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenCode" },
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["bio.tools", "biotools", "cli", "api", "bioinformatics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/decent-tools-for-thought/biotools-cli"
Repository = "https://github.com/decent-tools-for-thought/biotools-cli"
Issues = "https://github.com/decent-tools-for-thought/biotools-cli/issues"
Documentation = "https://bio.tools/api"

[dependency-groups]
dev = [
  "build>=1.2.2",
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "ruff>=0.13.3",
]

[project.scripts]
biotools = "biotools_cli.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
files = ["src/biotools_cli", "tests"]
strict = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
